cmake_minimum_required(VERSION 3.26)
project(C__Learnings)

set(CMAKE_CXX_STANDARD 23)

add_executable(C__Learnings main.cpp)

add_executable(VIJOS-P1001 VIJOS-P1001.cpp)
add_executable(test test.cpp)
add_executable(STL_vector STL_vector.cpp)
add_executable(STL_deque STL_deque.cpp)
add_executable(STL_list STL_list.cpp)
add_executable(STL_vector2 STL_vector2.cpp)
add_executable(STL_stack STL_stack.cpp)
add_executable(STL_queue STL_queue.cpp)
add_executable(STL_priorityQueue STL_priorityQueue.cpp)
add_executable(STL_listConn STL_listConn.cpp)
add_executable(STL_maxMinusMin STL_maxMinusMin.cpp)
add_executable(STL_counting STL_counting.cpp)
add_executable(STL_lexicographicOrderCmp STL_lexicographicOrderCmp.cpp)
add_executable(STL_reverseSeq STL_reverseSeq.cpp)
add_executable(STL_rotation STL_rotation.cpp)
add_executable(STL_swapping STL_swapping.cpp)
add_executable(STL_deCommon STL_deCommon.cpp)
add_executable(STL_sortingPPair STL_sortingPPair.cpp)
add_executable(STL_sortingTuple STL_sortingTuple.cpp)
add_executable(STL_permutation STL_permutation.cpp)
add_executable(STL_enumeration STL_enumeration.cpp)
add_executable(STL_binarySearch STL_binarySearch.cpp)
add_executable(STL_subSet STL_subSet.cpp)
add_executable(STL_lowerBound STL_lowerBound.cpp)
add_executable(STL_set STL_set.cpp)
add_executable(STL_setOptimized STL_setOptimized.cpp)
add_executable(STL_multiset STL_multiset.cpp)
add_executable(STL_map STL_map.cpp)
add_executable(STL_union STL_union.cpp)
add_executable(STL_bitOperation STL_bitOperation.cpp)
add_executable(STL_mask STL_mask.cpp)
add_executable(STL_traverseSubset STL_traverseSubset.cpp)
add_executable(STL_traverseSubset2 STL_traverseSubset2.cpp)
add_executable(STL_enumerationCombination STL_enumerationCombination.cpp)
add_executable(DatS_insertionSort DatS_insertionSort.cpp)
add_executable(DatS_GCD DatS_GCD.cpp)
add_executable(DatS_primeNumber DatS_primeNumber.cpp)
add_executable(DatS_maxProfit DatS_maxProfit.cpp)
add_executable(DatS_bubbleSort DatS_bubbleSort.cpp)
add_executable(DatS_selectionSort DatS_selectionSort.cpp)
add_executable(DatS_stableSort DatS_stableSort.cpp)
add_executable(DatS_shellSort DatS_shellSort.cpp)
add_executable(DatS_mathCal DatS_mathCal.cpp)
add_executable(DatS_processManagement DatS_processManagement.cpp)
add_executable(DatS_dualEndList DatS_dualEndList.cpp)
add_executable(DatS_flood DatS_flood.cpp)
add_executable(DatS_flood2 DatS_flood2.cpp)
add_executable(DatS_linearSearch DatS_linearSearch.cpp)
add_executable(DatS_dict DatS_dict.cpp)
add_executable(DatS_maxLoad DatS_maxLoad.cpp)
add_executable(DatS_bruteForceSearch DatS_bruteForceSearch.cpp)
add_executable(DatS_mergeSort DatS_mergeSort.cpp)
add_executable(DatS_kochCurve DatS_kochCurve.cpp)
add_executable(DatS_inversionNums DatS_inversionNums.cpp)
add_executable(DatS_countingSort DatS_countingSort.cpp)
add_executable(DatS_regionalization DatS_regionalization.cpp)
add_executable(DatS_lowestCost DatS_lowestCost.cpp)
add_executable(ACM ACM.cpp)
add_executable(DP_coinExchange DP_coinExchange.cpp)
add_executable(DP_bag DP_bag.cpp)
add_executable(DP_levenshteinDistcance DP_levenshteinDistcance.cpp)
add_executable(CGeo_pointProjectionToLine CGeo_pointProjectionToLine.cpp)
add_executable(CGeo_mirrorPoint CGeo_mirrorPoint.cpp)
add_executable(CGeo_anticlockwise CGeo_anticlockwise.cpp)
add_executable(CGeo_lines CGeo_lines.cpp)
add_executable(CGeo_crossing CGeo_crossing.cpp)
add_executable(CGeo_intersection CGeo_intersection.cpp)
add_executable(CGeo_distance CGeo_distance.cpp)